Vista previa de imagen en el Registro

--- a/iniciosesion-regstro.html
+++ b/iniciosesion-regstro.html
@@ -35,6 +35,10 @@
       <label for="profileImage">Imagen de perfil:</label>
       <input type="file" id="profileImage" name="profileImage" accept="image/*" required>
 
+      <div id="imagePreviewContainer">
+        <img id="imagePreview" src="#" alt="Vista previa de la imagen">
+      </div>
+
       <label for="username">Nombre de usuario:</label>
       <input type="text" id="username" name="username" required>
 
