--- a/iniciosesion-regstro.html
+++ b/iniciosesion-regstro.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Red Social</title>
+  <!-- Agrega el enlace a Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5+6pB0a7R1JZrA6KK6p0pc1U5Azg8fhFfp9XBOjB" crossorigin="anonymous">
+  <!-- Tu archivo de estilos personalizados -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,7 +17,7 @@
       <input type="text" id="loginUsername" name="loginUsername" required>
       <label for="loginPassword">Contraseña:</label>
       <input type="password" id="loginPassword" name="loginPassword" required>
-      <button type="submit">Iniciar sesión</button>
+      <button type="submit" class="btn btn-primary">Iniciar sesión</button>
       <p>¿No tienes una cuenta? <a href="#" onclick="switchForm()">Regístrate</a></p>
     </form>
 
@@ -48,11 +51,13 @@
       <label for="confirmPassword">Confirmar contraseña:</label>
       <input type="password" id="confirmPassword" name="confirmPassword" required>
 
-      <button type="submit">Registrarse</button>
+      <button type="submit" class="btn btn-primary">Registrarse</button>
       <p>¿Ya tienes una cuenta? <a href="#" onclick="switchForm()">Inicia sesión</a></p>
     </form>
   </div>
 
+  <!-- Agrega el script de Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-k3LtVWSVvm4jPR2wL4YmFK8f4ihFb9bBbcZxIaEuFpI0WWikd6tgLjSu2kd0vXfg" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 </html>
