--- a/publicaciones.html
+++ b/publicaciones.html
@@ -32,8 +32,9 @@
           <div class="mb-3">
             <label for="postImage" class="form-label">Imagen:</label>
             <input type="file" id="postImage" name="postImage" class="form-control" accept="image/*">
-            <div id="imagePreviewContainer"></div> <!-- Vista previa de la imagen -->
+            <div id="imagePreviewContainer" class="mt-2"></div>
           </div>
+          
         
           <div class="mb-3 select-wrapper">
             <label for="postCategory" class="form-label">*Categoría:</label>
