--- a/iniciosesion-regstro.html
+++ b/iniciosesion-regstro.html
@@ -4,59 +4,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Red Social</title>
-  <!-- Agrega el enlace a Bootstrap CSS -->
+  <!-- Enlace al CSS de Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5+6pB0a7R1JZrA6KK6p0pc1U5Azg8fhFfp9XBOjB" crossorigin="anonymous">
   <!-- Tu archivo de estilos personalizados -->
   <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Personaliza estilos adicionales aquí si es necesario */
+  </style>
 </head>
 <body>
   <div class="container">
-    <form id="loginForm" class="active-form" onsubmit="loginUser(); return false;">
-      <h2>Iniciar sesión</h2>
-      <label for="loginUsername">Nombre de usuario:</label>
-      <input type="text" id="loginUsername" name="loginUsername" required>
-      <label for="loginPassword">Contraseña:</label>
-      <input type="password" id="loginPassword" name="loginPassword" required>
-      <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-      <p>¿No tienes una cuenta? <a href="#" onclick="switchForm()">Regístrate</a></p>
-    </form>
-
-    <form id="registroForm" onsubmit="return validateRegistration();">
-      <h2>Registro</h2>
-      <label for="firstName">Nombre(s):</label>
-      <input type="text" id="firstName" name="firstName" required>
-
-      <label for="lastName">Apellidos:</label>
-      <input type="text" id="lastName" name="lastName" required>
-
-      <label for="birthdate">Fecha de nacimiento:</label>
-      <input type="date" id="birthdate" name="birthdate" required>
-
-      <label for="email">Correo electrónico:</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="profileImage">Imagen de perfil:</label>
-      <input type="file" id="profileImage" name="profileImage" accept="image/*" required>
-
-      <div id="imagePreviewContainer">
-        <img id="imagePreview" src="#" alt="Vista previa de la imagen">
+    <div class="row justify-content-center align-items-center min-vh-100">
+      <!-- Formulario de inicio de sesión -->
+      <div class="col-md-6">
+        <form id="loginForm" class="active-form" onsubmit="loginUser(); return false;">
+          <h2>Iniciar sesión</h2>
+          <div class="mb-3">
+            <label for="loginUsername" class="form-label">Nombre de usuario:</label>
+            <input type="text" id="loginUsername" name="loginUsername" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="loginPassword" class="form-label">Contraseña:</label>
+            <input type="password" id="loginPassword" name="loginPassword" class="form-control" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+          <p class="mt-3">¿No tienes una cuenta? <a href="#" onclick="switchForm()">Regístrate</a></p>
+        </form>
       </div>
-
-      <label for="username">Nombre de usuario:</label>
-      <input type="text" id="username" name="username" required>
-
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" required>
-
-      <label for="confirmPassword">Confirmar contraseña:</label>
-      <input type="password" id="confirmPassword" name="confirmPassword" required>
-
-      <button type="submit" class="btn btn-primary">Registrarse</button>
-      <p>¿Ya tienes una cuenta? <a href="#" onclick="switchForm()">Inicia sesión</a></p>
-    </form>
+      <!-- Formulario de registro -->
+      <div class="col-md-6">
+        <form id="registroForm" onsubmit="return validateRegistration();">
+          <h2>Registro</h2>
+          <div class="mb-3">
+            <label for="firstName" class="form-label">Nombre(s):</label>
+            <input type="text" id="firstName" name="firstName" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="lastName" class="form-label">Apellidos:</label>
+            <input type="text" id="lastName" name="lastName" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="birthdate" class="form-label">Fecha de nacimiento:</label>
+            <input type="date" id="birthdate" name="birthdate" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Correo electrónico:</label>
+            <input type="email" id="email" name="email" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="profileImage" class="form-label">Imagen de perfil:</label>
+            <input type="file" id="profileImage" name="profileImage" accept="image/*" class="form-control" required>
+          </div>
+          <div id="imagePreviewContainer" class="mb-3">
+            <img id="imagePreview" src="#" alt="Vista previa de la imagen" class="img-thumbnail">
+          </div>
+          <div class="mb-3">
+            <label for="username" class="form-label">Nombre de usuario:</label>
+            <input type="text" id="username" name="username" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Contraseña:</label>
+            <input type="password" id="password" name="password" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="confirmPassword" class="form-label">Confirmar contraseña:</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Registrarse</button>
+          <p class="mt-3">¿Ya tienes una cuenta? <a href="#" onclick="switchForm()">Inicia sesión</a></p>
+        </form>
+      </div>
+    </div>
   </div>
 
-  <!-- Agrega el script de Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-k3LtVWSVvm4jPR2wL4YmFK8f4ihFb9bBbcZxIaEuFpI0WWikd6tgLjSu2kd0vXfg" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
