Cambio de nombre

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <body>
   <header class="bg-primary py-3">
     <div class="container">
-      <h1 class="text-white">Facebook</h1>
+      <h1 class="text-white">Pagina Web - PrograWeb1</h1>
       <!-- Barra de búsqueda -->
       <div class="search-bar me-3">
         <input type="text" class="form-control" placeholder="Buscar...">
