Vista previa en publicaciones

--- a/iniciosesion-regstro.html
+++ b/iniciosesion-regstro.html
@@ -53,7 +53,7 @@
             <input type="file" id="profileImage" name="profileImage" accept="image/*" class="form-control" required>
           </div>
           <div id="imagePreviewContainer" class="mb-3">
-            <img id="imagePreview" src="#" alt="Vista previa de la imagen" class="img-thumbnail">
+            <img id="imagePreview" class="img-thumbnail">
           </div>
           <div class="mb-3">
             <label for="username" class="form-label">Nombre de usuario:</label>
