Minor bug fix, ocultar vista previa

--- a/publicaciones.html
+++ b/publicaciones.html
@@ -37,8 +37,9 @@
             <img id="imagePreview" class="img-thumbnail">
           </div>
           <div class="mb-3">
-            <button onclick="showImagePreview()" class="btn btn-primary">👁️Mostrar Vista Previa</button>
+            <button id="toggleImageButton" onclick="toggleImagePreview()" class="btn btn-primary">👁️Mostrar Vista Previa</button>
           </div>
+          
           <div class="mb-3 select-wrapper">
             <label for="postCategory" class="form-label">*Categoría:</label>
             <select id="postCategory" name="postCategory" class="form-select" required>
