--- a/publicaciones.html
+++ b/publicaciones.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" href="styles-publicaciones.css">
 </head>
 <body>
-  <header class="page-header">
+  <header class="page-header" style="height: 300px;">
     <h1>Mis Publicaciones</h1>
+    <iframe src="navbar.html" style="width: 100%; height: 290px; border: none;"></iframe>
   </header>
   
   <div class="container">
