--- a/publicaciones.html
+++ b/publicaciones.html
@@ -35,8 +35,8 @@
             <input type="file" id="postImage" name="postImage" accept="image/*" class="form-control" required>
           </div>
           <div id="imagePreviewContainer" class="mb-3">
-            <img id="imagePreview" class="img-thumbnail">
-          </div>
+            <img id="imagePreview" class="img-thumbnail" style="max-width: 400px; max-height: 400px;">
+        </div>
           <div class="mb-3">
             <button id="toggleImageButton" onclick="toggleImagePreview()" class="btn btn-primary">👁️Mostrar Vista Previa</button>
           </div>
