--- a/iniciosesion-regstro.html
+++ b/iniciosesion-regstro.html
@@ -33,8 +33,12 @@
         <form id="registroForm" onsubmit="return validateRegistration();">
           <h2>Registro</h2>
           <div class="mb-3">
-            <label for="firstName" class="form-label">Nombre(s):</label>
+            <label for="firstName" class="form-label">Nombre:</label>
             <input type="text" id="firstName" name="firstName" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="firstName" class="form-label">Segundo nombre:</label>
+            <input type="text" id="firstName" name="firstName" class="form-control">
           </div>
           <div class="mb-3">
             <label for="lastName" class="form-label">Apellidos:</label>
