--- a/publicaciones.html
+++ b/publicaciones.html
@@ -62,19 +62,11 @@
       </section>
     </main>
 
-    <div class="profile-container">
+    <button onclick="window.location.href = 'profile.html';" class="profile-container">
       <div class="profile-picture">
         <img src="profile.jpg" alt="Foto de perfil" class="rounded-circle img-thumbnail">
-      </div>
-      <div class="profile-info">
-        <h2>Nombre de Usuario</h2>
-        <p>Nombre Completo: Nombre Apellido</p>
-        <p>Correo electrónico: usuario@example.com</p>
-        <p>Edad: 25 años</p> <!-- Valor predeterminado, se puede calcular dinámicamente en JS -->
-        <button class="btn btn-primary" onclick="editProfile(this)">Editar Perfil</button>
-      </div>
-    </div>
-  </div>
+    </button>
+    
 
   <!-- Agrega el script de Bootstrap al final del cuerpo del documento -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
